--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link 
+  rel="icon" 
+  type="image/jpg" 
+  href="./public/assets/images/home/fav_icon.jpg" 
+  style="border-radius: 50% !important;"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Care Vision</title>
   </head>
   <body>
     <div id="root"></div>
