make frontend folder

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <link 
   rel="icon" 
   type="image/jpg" 
-  href="./public/assets/images/home/fav_icon.jpg" 
+  href="/assets/images/home/medical-ai.png" 
   style="border-radius: 50% !important;"
 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
