--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link 
   rel="icon" 
-  type="image/jpg" 
+  type="image/png" 
   href="/assets/images/home/medical-ai.png" 
   style="border-radius: 50% !important;"
 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Care Vision</title>
+    <title>Precious Scan</title>
   </head>
   <body>
     <div id="root"></div>
