--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,7 @@
   style="border-radius: 50% !important;"
 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Precious Scan</title>
+    <title>Precision Scan</title>
   </head>
   <body>
     <div id="root"></div>
